package homework.homework_6;

public interface IComputer {
    void setPrice(int price);
    void setPrice();
    int getPrice();
    Computer getComputer();
}
